# tic-tac-toe

./: .gitignore  CMakeLists.txt  Camera_image_data.npy  Camera_image_data.png.npy  README.md  package.xml  requirements.txt  tf_board2world.npy  tf_camera2world.npy  xList.npy  yList.npy
color_scripts/: color_filter.py  color_finder.py  image_processing.py  rectangle_support.py  sandbox_color.py
config/: moveit.rviz  tictactoe.perspective
develop/: res_match_template_B.tiff  res_match_template_Blue_BoundingBox.tiff
edge_scripts/: Image_topic.py  bag_to_csv.py  continuous_rectangle_detection.py  contour_detect.py  pick_position.py  rectangle_detection.py  rectangle_noPaper.py  rectangle_support.py  robot_toPaper.py  sandbox.py
game_scripts/: Realsense_tools.py  Realsense_tools_adam.py  board_detection.py  board_tf_publisher.py  move_piece.py  play_game.py  robot_move.py  sandbox_game.py  sandbox_game_clean.py  sandbox_imageSubtract.py  sandbox_tictactoe_game.py  scan_board.py  shape_detector.py  tictactoe_brain.py  tictactoe_game.py
launch/: board_tf_publisher.launch  board_transform.launch  camera_transform.launch  load_mh5l_d435i.launch  t2_robot.launch  t2_vision.launch  test_mh5l_d435i.launch  tf_pub.launch  tictactoe.launch
launch_new/: t2_setupCameraInfo.launch
meshes/: board_8x8x0.5_inch.STL  camera_mount.stl  circle-piece-D=1,d=0.55 in.STL  circle-piece-D=2.5,d1=1.6 in,d2=0.6.STL  tic-tac-toe board.STL  x-piece-1.0x1.0 in -0.50 in thick.STL  x-piece-2.5x2.5 in -0.25 in thick.STL
nodes/: HSV_extractor.py  Image_topic.py  board_center_publisher.py  board_center_subscriber.py  board_center_suscriber.py  board_tf_publisher.py  camera2board_tf_publisher.py  camera_info_server.py  circle_state_publisher.py  dataSaver.py  (+6 more)
(+111 files in other folders)
